--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.1.0",
     "rollup": "^2.7.6",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-terser": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^7.1.3"
   },
   "dependencies": {
     "@arguiot/broadcast.js": "^1.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.3"
+    "sjcl": "^1.0.8"
   }
 }
