--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "build": "rollup -c"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "babel": "^6.23.0",
     "rollup": "^2.7.6",
-    "rollup-plugin-terser": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^7.1.3"
+    "rollup-plugin-terser": "^5.3.0"
   },
   "dependencies": {
     "@arguiot/broadcast.js": "^1.0.2",
